<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_progress"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/backgroundimage">

  <TextView
      android:id="@+id/textView"
      android:layout_width="210dp"
      android:layout_height="39dp"
      android:layout_marginTop="70dp"
      android:fontFamily="serif"
      android:lineSpacingExtra="8sp"
      android:text="@string/login"
      android:textAlignment="center"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      android:textColor="#6E0419"
      android:textSize="30sp"
      android:textStyle="bold"
      android:typeface="sans"
      android:visibility="visible"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.095" />

  <EditText

      android:id="@+id/login_mail1"
      style="@style/Widget.AppCompat.EditText"
      android:layout_width="309dp"
      android:layout_height="58dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="32dp"


      android:layout_marginEnd="24dp"

      android:autofillHints=""


      android:hint="@string/email"
      android:inputType="textWebEmailAddress|textEmailSubject"
      android:textColorHint="#51021A"
      android:textSize="20sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.51"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView" />

  <EditText
      android:id="@+id/login_password1"
      android:layout_width="309dp"
      android:layout_height="59dp"
      android:layout_marginStart="32dp"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="32dp"


      android:autofillHints=""
      android:hint="@string/Password"


      android:inputType="textPassword"
      android:textColorHint="#51021A"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/login_mail1" />

  <Button
      android:id="@+id/login_btn1"
      android:layout_width="250dp"
      android:layout_height="60dp"
      android:layout_marginTop="32dp"

      android:backgroundTint="#700D0D"
      android:backgroundTintMode="add"

      android:foregroundGravity="fill"
      android:text="@string/login2"
      android:textColor="#FFF"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/login_password1"
      tools:ignore="DuplicateSpeakableTextCheck"
      tools:targetApi="m" />


  <ProgressBar
      android:id="@+id/progressBar2"
      style="?android:attr/progressBarStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:visibility="invisible"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/forgotlink" />

  <TextView
      android:id="@+id/textView3"
      android:layout_width="139dp"
      android:layout_height="32dp"
      android:text="@string/not_registered_yet"
      android:textColor="#1C1515"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.4"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/login_btn1" />

  <TextView
      android:id="@+id/register_string"
      android:layout_width="59dp"
      android:layout_height="35dp"
      android:layout_marginStart="2dp"
      android:minHeight="48dp"

      android:text="@string/Register2"
      android:textColor="#670202"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toEndOf="@+id/textView3"
      app:layout_constraintTop_toBottomOf="@+id/login_btn1" />

  <TextView
      android:id="@+id/forgotlink"
      android:layout_width="127dp"
      android:layout_height="37dp"

      android:layout_marginTop="8dp"
      android:text="Forgot password?"
      android:textColor="#151414"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/register_string" />


</androidx.constraintlayout.widget.ConstraintLayout>